Updated documentation for several files.
Made a large amount of documentation compatible with intellisense.
Fixed the "fork me" banner so that a scroll bar isn't added.
Added all relevant classes to Modules.
Split some class members into groups, such as the Unit Commands in
UnitInterface.
Converted some old WeaponType documentation to new style.
Documented some undocumented WeaponType members.

--- a/Documentation/customdoxygen.css
+++ b/Documentation/customdoxygen.css
@@ -76,7 +76,7 @@ body, table, div, p, dl {
   background-color: #0a0;
   overflow: hidden;
   white-space: nowrap;
-  position: absolute;
+  position: fixed;
   right: -70px;
   top: 10px;
   -webkit-transform: rotate(22deg);
