Remove unnecessary information from documentation.
- Added constants POSTION_SCALE, TILEPOSITION_SCALE, WALKPOSITION_SCALE.
- Expanded the macro used to define the various Position typedefs.
- Treats Positions constants as values. Hides underlying values except for
Origin.
- Fixed some issues with some Type definitions.
- Removed unnecessary information for various types (i.e. movement speed
  for pylons).
- Hide documentation for destructors.
- Hide documentation for several protected members.
- Apply additional style changes for further minimization.

--- a/Documentation/customdoxygen.css
+++ b/Documentation/customdoxygen.css
@@ -19,6 +19,10 @@ body, table, div, p, dl {
     background-color: transparent;
 }
 
+.memitem {
+    margin-bottom: 8px;
+}
+
 .memSeparator {
     display: none;
 }
@@ -29,7 +33,7 @@ body, table, div, p, dl {
 }
 
 /* Background image removal */
-.memproto, .tabs , .tabs2, .tabs3, .tablist li, .tablist a, .tablist a:hover, .tablist li.current a , .navpath ul, #nav-tree .selected, #nav-tree, .fieldtable th {
+.memproto, .tabs , .tabs2, .tabs3, .tablist li, .tablist a, .tablist a:hover, .tablist li.current a , .navpath ul, #nav-tree .selected, #nav-tree, .fieldtable th, dl.reflist dt {
     background-image: none;
 }
 
@@ -51,7 +55,7 @@ body, table, div, p, dl {
 }
 
 /* Member descriptions */
-.memproto {
+.memproto, dl.reflist dt  {
     padding: 0px;
     border-radius: 0px;
     -webkit-border-radius: 0px;
@@ -61,8 +65,12 @@ body, table, div, p, dl {
     -moz-box-shadow: none;
 }
 
+td.mlabels-right {
+    vertical-align: middle;
+}
+
 /* Border radius and box shadow */
-.memdoc, .fieldtable, .fieldtable th {
+.memdoc, .fieldtable, .fieldtable th, dl.reflist dd {
     border-radius: 0px;
     -webkit-border-radius: 0px;
     -moz-border-radius: 0px;
