[docs] Added media queries for reducing page widths.

--- a/Documentation/doxygen.css
+++ b/Documentation/doxygen.css
@@ -349,6 +349,18 @@ body, table, div, p, dl {
 	font: 13px arial,sans-serif;
 }
 
+@media screen and (max-width: 700px){
+  body, table, div, p, dl {
+    font: 12px arial,sans-serif !important;
+  }
+}
+
+@media screen and (max-width: 650px){
+  body, table, div, p, dl {
+    font: 11px arial,sans-serif !important;
+  }
+}
+
 /* @group Heading Levels */
 
 h1.groupheader {
@@ -678,6 +690,15 @@ table.memberdecls {
 
 .memname td {
 	vertical-align: bottom;
+}
+
+@media screen and (max-width: 650px){
+  .memname tr {
+    display: inline-block !important;
+  }
+  .memname td {
+    display: inline-block !important;
+  }
 }
 
 .memproto, dl.reflist dt {
@@ -1521,7 +1542,6 @@ customdoxygen.css
 .memSeparator {
     display: none;
 }
-
 
 /* Ribbon; Fork me banner; Modified from: https://unindented.org/articles/github-ribbon-using-css-transforms/ 
 Note: Parent must have overflow:hidden and position:relative.
