Revert "[docs] Removed a couple of nowrap values."
This reverts commit 6dfeceaaba56b1530d56196d47b66b64cb3f5654.

--- a/Documentation/doxygen.css
+++ b/Documentation/doxygen.css
@@ -626,6 +626,10 @@ table.memberdecls {
 	color: #555;
 }
 
+.memItemLeft, .memTemplItemLeft {
+  white-space: nowrap;
+}
+
 .memItemRight {
 	width: 100%;
 }
@@ -821,6 +825,7 @@ div.directory {
 }
 
 .directory td.entry {
+  white-space: nowrap;
   padding-right: 6px;
 	padding-top: 3px;
 }
